<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.itlifelang.extrememovie.mobile.ui.moviesearch.MovieSearchViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorSurface"
        android:orientation="vertical"
        android:transitionGroup="true"
        app:dispatchApplyWindowInsetsToChild="@{true}">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="?attr/actionBarSize"
            android:clipChildren="false"
            app:contentInsetStartWithNavigation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:marginLeftSystemWindowInset="@{true}"
            app:marginRightSystemWindowInset="@{true}"
            app:marginTopSystemWindowInset="@{true}"
            app:navigationIcon="@drawable/ic_arrow_back">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/search_edit_text"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/search_movie_hint"
                    android:imeOptions="flagNoExtractUi|actionSearch"
                    android:inputType="textNoSuggestions">

                    <requestFocus />
                </com.google.android.material.textfield.TextInputEditText>

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/mic_image_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/actionBarItemBackground"
                    android:padding="16dp"
                    app:srcCompat="@drawable/ic_mic" />
            </LinearLayout>
        </com.google.android.material.appbar.MaterialToolbar>

        <View
            android:id="@+id/search_separator_view"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:alpha="0.12"
            android:background="?attr/colorOnSurface"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/search_movie_list"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:clipToPadding="false"
            android:overScrollMode="never"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_separator_view"
            app:paddingBottomSystemWindowInset="@{true}"
            tools:listitem="@layout/item_search_movie" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/history_search_movie_list"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:clipToPadding="false"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_separator_view"
            app:paddingBottomSystemWindowInset="@{true}"
            tools:listitem="@layout/item_search_movie" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/retry_button"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_movie_retry_action"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_separator_view" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/empty_search_movie_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_movie_empty_search_movie"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_separator_view" />

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_separator_view" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
